# Congress-Tracker

./: .env.example  .gitignore  AGENTS.md  BACKEND_REQUIREMENTS.md  CREDITS.md  IMPLEMENTATION_SUMMARY.md  README.md  WATCHDOG.yml  e2e_test.sh  fetch.sh  ingest-pipeline-map.md  package-lock.json  package.json  papercuts.md  pnpm-lock.yaml  politicians.html  refactor.py  run_all.sh  setup-api-keys.sh
.agent/traces/: implementation-plan-roadmap.md  m0-documentation-reconciliation.md  m0-frontend-verification-gate.md  m0-migration-source-run-audit.md  m0-profile-evidence-repairs.md  m0-runtime-artifact-hygiene.md  m0-worker-heartbeat.md  merge-all-prs-2026-07-14.md  merge-all-prs-dependency-drift.json  merge-all-prs-pre-edit-context.md  review-all-prs-and-branches.md
.github/: dependabot.yml
.github/workflows/: agent-document-refactor.yml  agent-link-candidate.yml  agent-wire-candidate.yml  ci.yml
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/api-docs/: page.tsx
app/bills/: page.tsx
app/data/: Top Contracts.csv  Top Lobbying Firms.csv  Top Recipients of Contributions from Lobbyists, 2008 Cycle.csv  Top Recipients of Contributions from Lobbyists, 2024 Cycle.csv
app/data-sources/: page.tsx
app/legislators/: page.tsx
app/lobbying/: page.tsx
app/methodology/: page.tsx
app/networth/: page.tsx
app/portfolio/: loading.tsx  page.tsx
app/stocks/: page.tsx
app/visualizations/: page.tsx
backend/: Cargo.toml  README.md
backend/crates/backend_server/: Cargo.toml
backend/crates/backend_server/src/: lobbying_analytics.rs  main.rs  portfolio.rs
backend/crates/backend_server/tests/: api_test.rs  e2e_test.rs
backend/crates/civiq_client/: Cargo.toml
backend/crates/civiq_client/src/: lib.rs  types.rs
backend/crates/committee_detector/: Cargo.toml
backend/crates/committee_detector/src/: lib.rs
backend/crates/congress_api/: Cargo.toml  README.md
backend/crates/congress_api/src/: client.rs  lib.rs  pagination.rs  query.rs  types.rs
backend/crates/intel_backend/: Cargo.toml
backend/crates/intel_backend/migrations/: 0001_core.sql  0002_enrichment.sql  0003_committee_referrals.sql  0004_evidence_entities.sql  0005_relationship_derivation.sql  0006_worker_pipeline.sql  0007_stock_trades_view.sql  0008_annual_reports.sql  0009_enrichment.sql  0010_enriched_view.sql  0011_worker_pipeline_repairs.sql  0012_worker_sequence_permissions.sql  0013_worker_relationship_permissions.sql  0014_funding_cache.sql  0015_trade_lag_data_quality.sql  0016_fec_bulk.sql  0017_fec_bulk_reliability.sql  0018_fec_linkage_issues.sql  0019_fec_unresolved_committee_rankings.sql  0020_fec_restartable_staging.sql  0021_fec_supplemental_sources.sql  0022_fec_candidate_identity.sql  0023_influence_network_canonical_fec.sql  0024_financial_disclosure_warehouse.sql  0025_disclosure_asset_resolution.sql  0026_senate_efd_reports.sql  0027_fec_receipt_browse_counts.sql  0028_fec_browse_null_order.sql  0029_fec_operating_disbursements.sql  0030_fec_receipt_search.sql  0031_fec_receipt_cycle_search.sql  0032_senate_efd_acquisition.sql  0033_bill_amendments.sql  0034_lobbying_lobbyists.sql  0035_restore_stock_trades_view.sql  0036_canonical_member_portraits.sql  0037_normalize_member_portrait_ids.sql  0038_influence_network_aliases.sql  0039_fec_campaign_finance_summaries.sql  0040_fec_disbursement_browse_order.sql  (+12 more)
backend/crates/intel_backend/src/: annual_disclosures.rs  cache.rs  config.rs  db.rs  disclosures.rs  entity_resolution.rs  lib.rs  main.rs  models.rs  normalize.rs  provenance.rs  schema.rs  sec_assets.rs  senate_efd.rs  tracing.rs
backend/crates/intel_backend/src/fec_bulk/: batches.rs  canonicalize.rs  classify.rs  disbursements.rs  download.rs  identity.rs  mod.rs  parse.rs  pipeline.rs  rankings.rs  staging.rs  stream.rs  supplemental.rs  supplemental_ingest.rs
backend/crates/intel_backend/src/repository/: bills.rs  entity_resolution.rs  fec.rs  influence.rs  lobbying.rs  member_legislation.rs  members.rs  mod.rs  organizations.rs  relationships.rs  search.rs  source_runs.rs  trades.rs  votes.rs
backend/crates/intel_backend/src/routes/: admin.rs  bills.rs  candidates.rs  chambers.rs  committees.rs  fec.rs  financial.rs  funding.rs  health.rs  home.rs  influence.rs  lobbying.rs  member_intel.rs  members.rs  mod.rs  organizations.rs  portfolio.rs  search.rs  sources.rs  system.rs  trades.rs  visualizations.rs
backend/crates/intel_backend/tests/: cache_control_coverage_test.rs  fec_bulk_pipeline_test.rs  full_api_contract_test.rs  influence_financials_test.rs  ingestion_pipeline_test.rs  legislator_tabs_test.rs  migration_test.rs
backend/crates/intel_backend/tests/fixtures/senate_efd/: annual_report.html  annual_report.txt  discovery_page_1.json  discovery_page_2.json  ptr_report.html  ptr_report.txt
backend/crates/intel_worker/: Cargo.toml  build.rs  intel_worker.service
backend/crates/intel_worker/src/: job_policy.rs  lib.rs  main.rs  parsers.rs
backend/crates/intel_worker/tests/fixtures/: house_annual_2024.txt  house_ptr_2024.txt  unknown_disclosure_layout.txt
backend/crates/lobbying_client/: Cargo.toml
backend/crates/lobbying_client/src/: error.rs  lib.rs  types.rs
backend/crates/ticker_resolver/: Cargo.toml
backend/crates/ticker_resolver/src/: lib.rs  mapping.rs
backend/crates/trade_enricher/: Cargo.toml
backend/crates/trade_enricher/src/: lib.rs
components/: navigation.tsx  theme-toggle.tsx
components/ui/: navbar.tsx
components/visualizations/: campaign-finance-chart.tsx  donation-flow-chart.tsx  influence-network.tsx  lobbying-timeline.tsx
doc/: congressapidocumetion.md  lobbyingdoc.md  todo.md
docs/: BACKEND_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  Log.md  UI_UX_AUDIT.md
docs/agent/: hey.md  (+14 more)
frontend/: .eslintrc.json  .oxlintrc.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
lib/: csvUtils.ts
scripts/: agent-summary  db-backup  db-query  db-schema  freshness-guard  plan-lint  self-test  source-run-audit  verify-live-api-flows  verify-migrations  verify-rendered-critical-pages
(+369 files in other folders)
