[package]
name = "backend_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
capitoltrades_api = { path = "../capitoltrades_api" }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0"
