[package]
name = "backend_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
capitoltrades_api = { path = "../capitoltrades_api" }
congress_api = { path = "../congress_api" }
openfec_api = { path = "../openfec_api" }
ticker_resolver = { path = "../ticker_resolver" }
committee_detector = { path = "../committee_detector" }
lobbying_client = { path = "../lobbying_client" }
trade_enricher = { path = "../trade_enricher" }
anomaly_scorer = { path = "../anomaly_scorer" }
civiq_client = { path = "../civiq_client" }
intel_backend = { path = "../intel_backend" }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0"
