[package]
name = "civiq_client"
version = "0.1.0"
edition = "2021"
description = "CIV.IQ civic data API client. Free, no-key, MIT-licensed. Replaces Congress.gov API for member/vote/bill data. Based on https://civdotiq.org."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
