[package]
name = "intel_worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intel_worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "process"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
intel_backend = { path = "../intel_backend" }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dotenvy = "0.15"
