[package]
name = "ticker_resolver"
version = "0.1.0"
edition = "2021"
description = "Stock ticker to sector/industry resolver. Based on yfinance by Ran Aroussi and FinanceDatabase by Jeroen Bouma."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt"], optional = true }
once_cell = "1.19"
csv = "1.3"
phf = { version = "0.11", features = ["macros"] }

[features]
default = ["remote"]
remote = ["reqwest", "tokio"]
